syntax = 'proto3';import 'google/protobuf/wrappers.proto';package travelCards;service TravelCard {  rpc createNewTravelCards(CreateNewTravelCards) returns (TravelCardsOutput);  rpc getCardById(GetTravelCardById) returns (TravelCardsOutput);  rpc updateExistTravelCard(UpdateTravelCardInput) returns (TravelCardsOutput);  rpc deleteExistTravelCard(DeleteTravelCardInput) returns (DeleteTravelCardOutput);}message TravelCardsOutput {  string id = 1;  string userId = 2;  string title = 3;  optional string description = 4;  optional string amount = 5;  optional string currency = 6;  optional string image = 7;  optional string timezone = 8;  optional string timezoneOffset = 9;  optional string startDate = 10;  optional string endDate = 11;}message CreateNewTravelCards {  string userId = 1;  string title = 2;  optional string description = 3;  optional string image = 4;  optional string amount = 5;  optional string currency = 6;}message GetTravelCardById {  string id = 1;}message UpdateTravelCardInput {  string id = 1;  string userId = 2;  optional string title = 3;  optional string description = 4;  optional string amount = 5;  optional string currency = 6;  optional string image = 7;  optional string timezone = 8;  optional string timezoneOffset = 9;  optional string startDate = 10;  optional string endDate =  11;}message DeleteTravelCardInput {  string id = 1;  string userId = 2;}message DeleteTravelCardOutput {  bool success = 1;}